--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,8 +19,7 @@
         android:label="@string/app_name" >
         <activity
             android:label="@string/app_name"
-            android:name=".CameraActivity"
-            android:screenOrientation="landscape" >
+            android:name=".CameraActivity" >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
 
