--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "21.1.2"
 
     defaultConfig {
-        applicationId "com.example.cam"
+        applicationId "com.js.camera.cam"
         minSdkVersion 9
         targetSdkVersion 9
     }
