--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,14 +15,11 @@
         android:icon="@drawable/ic_launcher"
         android:allowBackup="true"
         android:label="@string/app_name">
+
         <activity
             android:label="@string/app_name"
-            android:name="com.js.camera.MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
+            android:name="com.js.camera.MainActivity"
+            android:exported="true">
         </activity>
 
         <activity
@@ -33,6 +30,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
