Issue #35: renamed MainActivity -> CameraActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
 
         <activity
             android:label="@string/app_name"
-            android:name="com.js.camera.MainActivity"
+            android:name="com.js.camera.CameraActivity"
             android:exported="true">
         </activity>
 
