--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,12 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:label="Photo"
+            android:name="com.js.camera.ViewPhotoActivity"
+            android:exported="true">
+        </activity>
+
     </application>
 
 </manifest>
