--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,8 @@ android {
 }
 
 dependencies {
+    compile "com.android.support:support-v4:18.0.+"
     compile 'commons-io:commons-io:2.2'
+    compile 'com.google.guava:guava:r05'
 }
 
