--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,12 @@
             android:exported="true">
         </activity>
 
+        <activity
+            android:label="Experiment"
+            android:name="com.js.camera.GraphicsExperimentActivity"
+            android:exported="true">
+        </activity>
+
     </application>
 
 </manifest>
