--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,12 @@
             android:exported="true">
         </activity>
 
+        <activity
+            android:label="Picasso"
+            android:name="com.js.camera.PicassoDemoActivity"
+            android:exported="true">
+        </activity>
+
     </application>
 
 </manifest>
